--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213181106085" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213181415382" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15027,7 +15027,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200213181037205" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213181426800" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -17094,7 +17094,7 @@ __אופן ההכנה____
 
 את [[פיליפ ז&quot;ל|http://www.imdb.com/name/nm0000450/]]</pre>
 </div>
-<div created="20170801101117385" modified="20170804144705644" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פינה באוש">
+<div created="20170801101117385" modified="20200213181457828" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פינה באוש">
 <pre>[img[pictures/pina-bausch.jpg]]
 
 !!![[אירי]]:
@@ -17103,7 +17103,8 @@ __אופן ההכנה____
 [[זה|https://www.youtube.com/watch?v=LA65HrIMrjs]] למשל, קטע שרקדן של הלהקה הביא לאחר חופשה, [[ונכנס|https://www.youtube.com/watch?v=CIrRR48s5As]] למופע ציפורנים.
 
 [[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה השתמשו בשמו [[ב-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
-</pre>
+
+&lt;&lt;englink [[Pina Bausch]]&gt;&gt;</pre>
 </div>
 <div created="20180719134829793" modified="20180722161334015" tags="[[כאן בגטו]] [[חיות אוכל]]" title="פיקוק">
 <pre>[img[pictures/peacock.jpg]]
