--- a/english.html
+++ b/english.html
@@ -287,8 +287,6 @@ Error message and password prompt
 
 <li>David Byrne</li>
 
-<li>Draft of 'Kitchens'</li>
-
 <li>Dreams that we've dreamt</li>
 
 <li>Elementary</li>
@@ -374,6 +372,8 @@ Error message and password prompt
 <li>Papa Yoel</li>
 
 <li>Philippe</li>
+
+<li>Pina Bausch</li>
 
 <li>Radio epgb</li>
 
@@ -8286,7 +8286,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Draft of 'Kitchens']] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8661,14 +8661,6 @@ Be good.
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
-<div created="20200212224246020" draft.of="Kitchens" draft.title="Kitchens" modified="20200213180838328" tags="Houses [[Food addicts]]" title="Draft of 'Kitchens'">
-<pre>[img[pictures/kitchens.jpg]]
-
-&lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
-
- &lt;&lt;heblink [[מטבחים]]&gt;&gt;
-</pre>
-</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -8918,7 +8910,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213180333135" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213181340622" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
@@ -9072,6 +9064,12 @@ He did his best at raising us as good people, and in most cases he even succeede
 
  &lt;&lt;heblink [[פיליפ]]&gt;&gt;
 </pre>
+</div>
+<div created="20200213181241224" modified="20200213181359354" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
+<pre>
+[img[pictures/pina-bausch.jpg]]
+
+ &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
 <div created="20190226093702127" modified="20191113120521333" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
