--- a/english.html
+++ b/english.html
@@ -269,6 +269,8 @@ Error message and password prompt
 
 <li>Bjork</li>
 
+<li>blue-marble-hood</li>
+
 <li>Changing</li>
 
 <li>Children</li>
@@ -8286,7 +8288,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="blue-marble-hood [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8562,6 +8564,13 @@ Is where I want to be
 
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
+</div>
+<div created="20200213181607810" modified="20200213181951723" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
+<pre>
+[img[pictures/blue-marble.jpg]]
+
+
+ &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
 <div created="20200213180145409" modified="20200213180416623" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
 <pre>
@@ -8910,7 +8919,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213181340622" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213181822889" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
