--- a/english.html
+++ b/english.html
@@ -289,7 +289,11 @@ Error message and password prompt
 
 <li>David Byrne</li>
 
+<li>Draft of 'Kitchens'</li>
+
 <li>Dreams that we've dreamt</li>
+
+<li>Dreams we have dreamt</li>
 
 <li>Elementary</li>
 
@@ -8288,7 +8292,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="blue-marble-hood [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Draft of 'Kitchens']] [[Dreams we have dreamt]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8670,10 +8674,26 @@ Be good.
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
 </div>
+<div created="20200212224246020" draft.of="Kitchens" draft.title="Kitchens" modified="20200213182937827" tags="Houses [[Food addicts]]" title="Draft of 'Kitchens'">
+<pre>[img[pictures/kitchens.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[מטבחים]]&gt;&gt;
+</pre>
+</div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
+</div>
+<div created="20200213182904861" modified="20200213183106268" tags="Children [[The team]]" title="Dreams we have dreamt">
+<pre>
+[img[pictures/chalomot-shechalamnoo.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Dreams we have dreamt]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[jחלומות שחלמנו]]&gt;&gt;</pre>
 </div>
 <div created="20190226092627784" modified="20200212165740061" tags="[[TV Series]] TV" title="Elementary">
 <pre>[img[pictures/elementary.jpg]]
