--- a/english.html
+++ b/english.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>blue-marble-hood</li>
 
+<li>Cat Sisters</li>
+
 <li>Changing</li>
 
 <li>Children</li>
@@ -288,8 +290,6 @@ Error message and password prompt
 <li>Dandan went</li>
 
 <li>David Byrne</li>
-
-<li>Draft of 'Kitchens'</li>
 
 <li>Dreams that we've dreamt</li>
 
@@ -8292,7 +8292,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Draft of 'Kitchens']] [[Dreams we have dreamt]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8569,12 +8569,22 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20200213181607810" modified="20200213181951723" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
+<div created="20200213181607810" modified="20200213183525067" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
 <pre>
 [img[pictures/blue-marble.jpg]]
 
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
+</div>
+<div created="20200213183239085" modified="20200213183600795" tags="[[Monkeys with car keys]]" title="Cat Sisters">
+<pre>
+[img[pictures/achayot-chatul.jpg]]
+
+
+ &lt;&lt;heblink [[אחיות חתול]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200213180145409" modified="20200213180416623" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
 <pre>
@@ -8673,14 +8683,6 @@ Be good.
 <pre>[img[pictures/david-byrne.jpg]]
 
  &lt;&lt;heblink [[דיוויד ביירן]]&gt;&gt;</pre>
-</div>
-<div created="20200212224246020" draft.of="Kitchens" draft.title="Kitchens" modified="20200213182937827" tags="Houses [[Food addicts]]" title="Draft of 'Kitchens'">
-<pre>[img[pictures/kitchens.jpg]]
-
-&lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
-
- &lt;&lt;heblink [[מטבחים]]&gt;&gt;
-</pre>
 </div>
 <div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
@@ -8939,7 +8941,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213181822889" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213183605427" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
@@ -9041,7 +9043,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
-<div created="20200213180740266" modified="20200213180956509" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
+<div created="20200213180740266" modified="20200213183538821" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
 <pre>
 [img[pictures/northern-exposure.jpg]]
 
