--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחיות חתול]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10124,14 +10124,14 @@ well,
 &lt;&lt;englink [[Outer sisters]]&gt;&gt;
 </pre>
 </div>
-<div created="20170817181814040" modified="20200213183455691" tags="[[קופים ממונעים]]" title="אחיות חתול">
+<div created="20170817181814040" modified="20200213184036257" tags="[[קופים ממונעים]]" title="אחיות חתול">
 <pre>[img[pictures/achayot-chatul.jpg]]
 
 !!![[יויו]]:
 
 כששואלים אחות כהן איזה חיה היא - היא מיד עונה - חתול.
 
-&lt;&lt;englink [[ Cat Sisters ]]&gt;&gt;
+&lt;&lt;englink [[Cat Sisters]]&gt;&gt;
 </pre>
 </div>
 <div created="20170612182534470" modified="20180814110838111" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
