--- a/english.html
+++ b/english.html
@@ -285,6 +285,8 @@ Error message and password prompt
 
 <li>Coffee</li>
 
+<li>Coffee and Candies</li>
+
 <li>Coffee shops</li>
 
 <li>Dandan went</li>
@@ -8292,7 +8294,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coffee and Candies]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8576,10 +8578,13 @@ Is where I want to be
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
-<div created="20200213183239085" modified="20200213183600795" tags="[[Monkeys with car keys]]" title="Cat Sisters">
+<div created="20200213183239085" modified="20200213203118826" tags="[[Monkeys with car keys]]" title="Cat Sisters">
 <pre>
 [img[pictures/achayot-chatul.jpg]]
 
+!!![[Yoyo]]:
+
+When a Coen sister is asked what kind of animal is she, she immediately answers- a cat.
 
  &lt;&lt;heblink [[אחיות חתול]]&gt;&gt;
 
@@ -8661,6 +8666,12 @@ Be good.
  &lt;&lt;heblink [[קפה]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200213203133252" modified="20200213203354401" tags="[[Here in the Ghetto]] Coffee [[Food addicts]]" title="Coffee and Candies">
+<pre>
+[img[pictures/cafe-vemamtakim.jpg]]
+
+ &lt;&lt;heblink [[קפה וממתקים]]&gt;&gt;</pre>
 </div>
 <div created="20200213160902173" modified="20200213161305282" tags="[[Food addicts]] Coffee Metafiction" title="Coffee shops">
 <pre>[img[pictures/coffee-shops.jpg]]
@@ -9043,7 +9054,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 </pre>
 </div>
-<div created="20200213180740266" modified="20200213183538821" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
+<div created="20200213180740266" modified="20200213203254499" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
 <pre>
 [img[pictures/northern-exposure.jpg]]
 
