--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחיות חתול]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קפה וממתקים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213183500098" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213203452255" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15032,7 +15032,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200213182020001" tags="בתים [[חיות אוכל]]" title="מטבחים">
+<div created="20190617131650064" modified="20200213203424031" tags="בתים [[חיות אוכל]]" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -17626,12 +17626,14 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181102155349776" modified="20190408154011466" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="קפה וממתקים">
+<div created="20181102155349776" modified="20200213203448784" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="קפה וממתקים">
 <pre>[img[pictures/cafe-vemamtakim.jpg]]
 
 !!![[תומר]]:
 
 עכשיו כבר נובמבר, [[וויקליף|וויקליף ז'אן]] אמור לחזור. עדיין חם, אבל פחות ולא מזיעים. התינוקת מתרגלת למטפלת, כך שיצאתי לסיבוב קניות דרך יהודה הלוי, ימינה באלנבי עד 107, שם [[בקפה וממתקים|https://hamordim.wordpress.com/tag/%D7%A7%D7%A4%D7%94/]] נמצא אדון מסביר פנים, מוקף בשוקולד וטוחן קפה. קניתי בונבוני שוקולד במילוי דובדבני אמרנה על המשקל והמשכתי במסע.
+
+&lt;&lt;englink [[Coffee and Candies]]&gt;&gt;
 
 </pre>
 </div>
