--- a/english.html
+++ b/english.html
@@ -371,6 +371,8 @@ Error message and password prompt
 
 <li>Music</li>
 
+<li>My Mother</li>
+
 <li>Northern Exposure</li>
 
 <li>On the road to somewhere</li>
@@ -8294,7 +8296,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coffee and Candies]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[My Mother]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8578,7 +8580,7 @@ Is where I want to be
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
-<div created="20200213183239085" modified="20200213203118826" tags="[[Monkeys with car keys]]" title="Cat Sisters">
+<div created="20200213183239085" modified="20200213203654841" tags="[[Monkeys with car keys]]" title="Cat Sisters">
 <pre>
 [img[pictures/achayot-chatul.jpg]]
 
@@ -9053,6 +9055,22 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[מוזיקה]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200213203558719" modified="20200213204746946" tags="[[True stories]] Mothers" title="My Mother">
+<pre>
+[img[pictures/ima-sheli-iri.jpg]]
+
+!!![[Iry]]:
+
+In April, my mother, who's named Edna, came to visit me, and one of the things she told me was that, two years before I was born, after eight months pregnancy, she gave birth to a dead fetus. Along the years, my mother had been wondering, with herself and with my dad, whether to tell me or not, but both of them never succeeded in doing it, and now after the separation from my father, she began seeing a therapist again, and one of the things she was asked to do is to tell me about it, that she and dad loved each other very much when they first met each other and got to know each other. She said that, after the incident, she lost her spirit, and at that time, she thinks, a distance started to evolve between her and my dad.
+
+And I have one thing to say about it
+
+It's difficult for me at this point of life to think about relations.
+
+
+
+ &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
 </div>
 <div created="20200213180740266" modified="20200213203254499" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
 <pre>
