--- a/english.html
+++ b/english.html
@@ -385,6 +385,8 @@ Error message and password prompt
 
 <li>Pina Bausch</li>
 
+<li>Prince</li>
+
 <li>Radio epgb</li>
 
 <li>Recipes</li>
@@ -8296,7 +8298,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[My Mother]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Prince [[My Mother]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8573,7 +8575,7 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20200213181607810" modified="20200213183525067" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
+<div created="20200213181607810" modified="20200213204959656" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
 <pre>
 [img[pictures/blue-marble.jpg]]
 
@@ -9130,6 +9132,23 @@ He did his best at raising us as good people, and in most cases he even succeede
 [img[pictures/pina-bausch.jpg]]
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
+</div>
+<div created="20200213204850477" modified="20200213205954896" tags="[[Outer sisters]] Music Films" title="Prince">
+<pre>
+[img[pictures/prince.jpg]]
+
+
+!!![[The team]]:
+
+[[Purple rain, purple rain|https://www.youtube.com/watch?v=TvnYmWpD_T8]]. [[This is the picture|https://www.billboard.com/files/styles/article_main_image/public/media/do-not-reuse-bb36only-prince-purple-rain-1984-richard-e-aaron-mptv-billboard-650.jpg]]. Today is the one and a half years anniversary of Prince’s death, may he rest in peace. Longing his unique [[musicology|https://www.youtube.com/watch?v=zILabWVdIMs]]. Yes, occasionally in October, you recall that, [[sometimes it snows in April|https://www.youtube.com/watch?v=uGzXiK8_KU8]]. 
+
+
+
+
+ &lt;&lt;heblink [[Prince]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20190226093702127" modified="20191113120521333" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
