--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="פרינס [[אימא שלי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אימא שלי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -17238,7 +17238,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181021143810622" modified="20200213205520657" tags="[[אחיות חוץ]] מוזיקה סרטים" title="פרינס">
+<div created="20181021143810622" modified="20200213210339447" tags="[[אחיות חוץ]] מוזיקה סרטים" title="פרינס">
 <pre>[img[pictures/prince.jpg]]
 
 !!![[הצוות]]:
@@ -17246,7 +17246,7 @@ Fapina''
 
 [[גשם סגול, גשם סגול|https://www.youtube.com/watch?v=TvnYmWpD_T8]]. [[זו התמונה|https://www.billboard.com/files/styles/article_main_image/public/media/do-not-reuse-bb36only-prince-purple-rain-1984-richard-e-aaron-mptv-billboard-650.jpg]]. היום הוא יום השנה וחצי למותו של [[פרינס|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%99%D7%A0%D7%A1]], ינוח על משכבו בשלום. בגעגוע [[למוזיקולוגיה הייחודית|https://www.youtube.com/watch?v=zILabWVdIMs]].  כן, לפעמים נזכרים באוקטובר, [[שלפעמים יורד שלג באפריל|https://www.youtube.com/watch?v=uGzXiK8_KU8]].
 
-&lt;&lt;englink [[Pince]]&gt;&gt;</pre>
+&lt;&lt;englink [[Prince]]&gt;&gt;</pre>
 </div>
 <div created="20180429154850092" modified="20180605132359869" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="צ'ילי כמו קארנה">
 <pre>[img[pictures/chilli-cmo-karne.jpg]]
