--- a/english.html
+++ b/english.html
@@ -8298,7 +8298,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Prince [[My Mother]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Prince [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9133,7 +9133,7 @@ He did his best at raising us as good people, and in most cases he even succeede
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
-<div created="20200213204850477" modified="20200213205954896" tags="[[Outer sisters]] Music Films" title="Prince">
+<div created="20200213204850477" modified="20200213210309762" tags="[[Outer sisters]] Music Films" title="Prince">
 <pre>
 [img[pictures/prince.jpg]]
 
