--- a/index.html
+++ b/index.html
@@ -10197,7 +10197,7 @@ well,
 
 מצחיק אבל רק לא מזמן גיליתי שאימא של [[ג'אז|jazz]] עבדה איתי [[בטלוויזיה|מערכת תל אביב]].</pre>
 </div>
-<div created="20170505164125282" modified="20200213203840864" tags="[[סיפורים אמיתיים]] אימהות" title="אימא שלי">
+<div created="20170505164125282" modified="20200213210850140" tags="[[סיפורים אמיתיים]] אימהות" title="אימא שלי">
 <pre>[img[pictures/ima-sheli-iri.jpg]]
 
 !!![[אירי]]:
@@ -10209,7 +10209,7 @@ well,
 קשה לי בשלב הזה של החיים לחשוב על יחסים.
 
 
-&lt;&lt;englink [[Cat Sisters]]&gt;&gt;
+&lt;&lt;englink [[My Mother]]&gt;&gt;
 
 </pre>
 </div>
