--- a/english.html
+++ b/english.html
@@ -327,6 +327,8 @@ Error message and password prompt
 
 <li>How many songs can you even invent at all</li>
 
+<li>Hysterical</li>
+
 <li>I would like to apologize</li>
 
 <li>I, the psychiatrist</li>
@@ -362,6 +364,8 @@ Error message and password prompt
 <li>Meals</li>
 
 <li>Meir Ariel</li>
+
+<li>Menopause sisters</li>
 
 <li>Metafiction</li>
 
@@ -408,6 +412,8 @@ Error message and password prompt
 <li>The blue is already here</li>
 
 <li>The first assembly</li>
+
+<li>The global village</li>
 
 <li>The kitchen according to Genevieve</li>
 
@@ -8298,7 +8304,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Prince [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8575,14 +8581,14 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20200213181607810" modified="20200213204959656" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
+<div created="20200213181607810" modified="20200213212352870" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
 <pre>
 [img[pictures/blue-marble.jpg]]
 
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
-<div created="20200213183239085" modified="20200213203654841" tags="[[Monkeys with car keys]]" title="Cat Sisters">
+<div created="20200213183239085" modified="20200213212523487" tags="[[Monkeys with car keys]]" title="Cat Sisters">
 <pre>
 [img[pictures/achayot-chatul.jpg]]
 
@@ -8847,6 +8853,23 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[כמה שירים כבר אפשר להמציא בכלל]]&gt;&gt;
 </pre>
 </div>
+<div created="20200213211047243" modified="20200213212513241" tags="[[Animal farm]] [[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]]" title="Hysterical">
+<pre>
+[img[pictures/histeriyot.jpg]]
+
+!!![[Iry and Gura]]:
+
+We imagine the face of [[Hippocrates|https://en.wikipedia.org/wiki/Hippocrates]], while his hand is moving in a scornful motion, telling his students, after just taking his oath:
+
+//Leave them, those are just hysterical.//
+
+Apparently, we are not just hysterical, for wombs located in our stomachs.  
+
+Yes you- killing machines, exterminating and cancelling all that's not in your favor when comes to sight - [[we'll tell you over and over and over|The global village]] - no more!
+
+
+ &lt;&lt;heblink [[היסטריות]]&gt;&gt;</pre>
+</div>
 <div created="20200212221326501" modified="20200212221745764" tags="[[On the road to somewhere]] [[True stories]] [[How many songs can you even invent at all]]" title="I would like to apologize">
 <pre>[img[pictures/ani-roza.jpg]]
 
@@ -8956,7 +8979,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212224246020" modified="20200213183605427" tags="Houses [[Food addicts]]" title="Kitchens">
+<div created="20200212224246020" modified="20200213213226244" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Kitchens]]&quot;&gt;&gt;
@@ -9002,6 +9025,16 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 
 
+</pre>
+</div>
+<div created="20200213213011829" modified="20200213213247279" tags="Mothers [[Monkeys with car keys]]" title="Menopause sisters">
+<pre>
+[img[pictures/bloot-sisters.jpg]]
+
+&lt;&lt;list-links filter:&quot;[tag[Menopause sisters]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[האחיות בלות]]&gt;&gt;
 </pre>
 </div>
 <div created="20200212160436198" modified="20200212161924242" tags="[[True stories]] Films" title="Metafiction">
@@ -9074,7 +9107,7 @@ It's difficult for me at this point of life to think about relations.
 
  &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
 </div>
-<div created="20200213180740266" modified="20200213203254499" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
+<div created="20200213180740266" modified="20200213212640944" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
 <pre>
 [img[pictures/northern-exposure.jpg]]
 
@@ -9133,7 +9166,7 @@ He did his best at raising us as good people, and in most cases he even succeede
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
-<div created="20200213204850477" modified="20200213210309762" tags="[[Outer sisters]] Music Films" title="Prince">
+<div created="20200213204850477" modified="20200213212548516" tags="[[Outer sisters]] Music Films" title="Prince">
 <pre>
 [img[pictures/prince.jpg]]
 
@@ -9145,7 +9178,7 @@ He did his best at raising us as good people, and in most cases he even succeede
 
 
 
- &lt;&lt;heblink [[Prince]]&gt;&gt;
+ &lt;&lt;heblink [[פרינס]]&gt;&gt;
 
 
 </pre>
@@ -9249,6 +9282,12 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 
 </pre>
+</div>
+<div created="20200213212257979" modified="20200213212926793" tags="[[Monkeys with car keys]] [[Iry and Gura]] [[Iry claims]]" title="The global village">
+<pre>
+[img[pictures/hacfar-haglobaly.jpg]]
+
+ &lt;&lt;heblink [[הכפר הגלובלי]]&gt;&gt;</pre>
 </div>
 <div created="20200213161521882" modified="20200213161924497" tags="Meals Kitchens Recipes" title="The kitchen according to Genevieve">
 <pre>[img[pictures/genevieve-food.jpg]]
