--- a/index.html
+++ b/index.html
@@ -9172,10 +9172,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200212143318360" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200213214722566" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200212144649008" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200213214724949" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות בלות]] [[הכפר הגלובלי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בחוות החיות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213213000007" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213214849618" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10664,7 +10664,7 @@ well,
 
 בשבוע שעבר הלכתי להיפגש עם חבר [[בשרונה|http://www.saronatlv.co.il/]], ובמעבר [[מרחוב הארבעה|https://he.wikipedia.org/wiki/%D7%A8%D7%97%D7%95%D7%91_%D7%94%D7%90%D7%A8%D7%91%D7%A2%D7%94]] זה מה שראיתי (הבניינים באמצע הם [[המערכת ז&quot;ל|מערכת תל אביב]]).</pre>
 </div>
-<div created="20170425194155286" modified="20200212221051148" tags="[[קופים ממונעים]] הצוות" title="בחוות החיות">
+<div created="20170425194155286" modified="20200213215353015" tags="[[קופים ממונעים]] הצוות" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -10678,7 +10678,7 @@ well,
 
 
 
-&lt;&lt;englink [[Animal farm]]&gt;&gt;
+&lt;&lt;englink [[In the Animal Farm]]&gt;&gt;
 
 
 
@@ -15157,7 +15157,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200212211423245" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200213214956830" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
