--- a/english.html
+++ b/english.html
@@ -259,8 +259,6 @@ Error message and password prompt
 
 <li>Alexandra</li>
 
-<li>Animal farm</li>
-
 <li>Ayala Malach Pines</li>
 
 <li>Berry Sakharof</li>
@@ -334,6 +332,8 @@ Error message and password prompt
 <li>I, the psychiatrist</li>
 
 <li>Imagine</li>
+
+<li>In the Animal Farm</li>
 
 <li>Iris the daughter</li>
 
@@ -8295,7 +8295,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200213170824756" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200213214744928" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8304,7 +8304,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Keep on bleeding]] [[In the Animal Farm]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8324,7 +8324,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213180653431" title="$:/temp/search">
+<div created="20161023184814872" modified="20200213214905837" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8523,17 +8523,6 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
-</div>
-<div created="20200212215510131" modified="20200212220610491" tags="[[Monkeys with car keys]] [[The team]]" title="Animal farm">
-<pre>[img[pictures/bechavat-hachayot.jpg]]
-
-
-&lt;&lt;list-links filter:&quot;[tag[Animal farm]]&quot;&gt;&gt;
-
- &lt;&lt;heblink [[בחוות החיות]]&gt;&gt;
-
-
-</pre>
 </div>
 <div created="20191113130654313" modified="20200212181621602" tags="[[Outer sisters]]" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
@@ -8853,7 +8842,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[כמה שירים כבר אפשר להמציא בכלל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213211047243" modified="20200213212513241" tags="[[Animal farm]] [[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]]" title="Hysterical">
+<div created="20200213211047243" modified="20200213214550757" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
 <pre>
 [img[pictures/histeriyot.jpg]]
 
@@ -8900,6 +8889,20 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 
  &lt;&lt;heblink [[imagine]]&gt;&gt;
 
+
+
+</pre>
+</div>
+<div created="20200212215510131" modified="20200213214815191" tags="[[Monkeys with car keys]] [[The team]]" title="In the Animal Farm">
+<pre>[img[pictures/bechavat-hachayot.jpg]]
+
+
+''[[IT’S VERY VERY FUN]]''
+
+
+&lt;&lt;list-links filter:&quot;[tag[In the Animal Farm]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[בחוות החיות]]&gt;&gt;
 
 
 </pre>
@@ -8972,9 +8975,11 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212173527645" modified="20200212181007023" tags="[[Animal farm]]" title="Keep on bleeding">
+<div created="20200212173527645" modified="20200213215405657" tags="[[In the Animal Farm]]" title="Keep on bleeding">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
+
+''In the animal farm'', we on our behalf [[will keep on bleeding|https://www.youtube.com/watch?v=cYhDSo9pgxg]], butts and stomachs will keep on bore.
 
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
