--- a/english.html
+++ b/english.html
@@ -419,6 +419,8 @@ Error message and password prompt
 
 <li>The lab</li>
 
+<li>The right hand doesn't know</li>
+
 <li>The sisters' questionnaire</li>
 
 <li>The Sopranos</li>
@@ -8304,7 +8306,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Keep on bleeding]] [[In the Animal Farm]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The right hand doesn't know]] [[In the Animal Farm]] [[Keep on bleeding]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8975,7 +8977,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212173527645" modified="20200213215405657" tags="[[In the Animal Farm]]" title="Keep on bleeding">
+<div created="20200212173527645" modified="20200215093218220" tags="[[In the Animal Farm]] [[Monkeys with car keys]]" title="Keep on bleeding">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -9310,6 +9312,15 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 
  &lt;&lt;heblink [[המעבדה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215093007979" modified="20200215093300983" tags="[[In the Animal Farm]]" title="The right hand doesn't know">
+<pre>
+[img[pictures/yad-yamin.jpg]]
+
+''In the animal farm'', the right hand doesn't know, what the left hand is doing (and the other way around)
+
+ &lt;&lt;heblink [[יד ימין אינה יודעת]]&gt;&gt;
 </pre>
 </div>
 <div created="20200202185828817" modified="20200202185933864" tags="[[Coen sister]]" title="The sisters' questionnaire">
