--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[בחוות החיות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[יד ימין אינה יודעת]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200213214849618" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215092845947" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13248,11 +13248,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 באופן יזום ומכוון לא [[איזכרנו|אחות כהן]] את קיומם של [[המכשירים המחופשים לטלפון|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%A4%D7%95%D7%9F_%D7%97%D7%9B%D7%9D]] כאן בגנזך עד עכשיו, למרות שלכולנו יש איזה אחד. אני יושב ומחכה רגוע למטרו הבוקר, עד שהחכם ממליץ לי על סידרת תמונות  מבדיוק לפני שנה. הוא חושב שהן יתאימו לי לאלבום ולי הולך הראש. זו הייתה סדרת תמונות שחשבתי שמחקתי - ובאמת מחקתי רק לא מהבפנים. בתמונות רואים את נטלי, [[שהלכה ממני|https://www.youtube.com/watch?v=1dXEzMcfCyA]] לפני שלושה חודשים, ואותי, מאוהבים. </pre>
 </div>
-<div created="20170514194133105" modified="20181023114934847" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
+<div created="20170514194133105" modified="20200215093417791" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
 
 
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, יד ימין אינה יודעת, מה יד שמאל עושה. (ולהיפך).</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, יד ימין אינה יודעת, מה יד שמאל עושה. (ולהיפך).
+
+&lt;&lt;englink [[The right hand doesn't know]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170702183413439" modified="20170702205221449" tags="[[אחות כהן]]" title="יה">
 <pre>[img[pictures/ya.jpg]]
@@ -15157,7 +15161,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200213214956830" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200215093336630" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
