--- a/english.html
+++ b/english.html
@@ -429,6 +429,8 @@ Error message and password prompt
 
 <li>the wishing star 01</li>
 
+<li>They cut down tree</li>
+
 <li>Tomer</li>
 
 <li>True stories</li>
@@ -8306,7 +8308,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The right hand doesn't know]] [[In the Animal Farm]] [[Keep on bleeding]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[They cut down tree]] [[The right hand doesn't know]] [[In the Animal Farm]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8977,7 +8979,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212173527645" modified="20200215093218220" tags="[[In the Animal Farm]] [[Monkeys with car keys]]" title="Keep on bleeding">
+<div created="20200212173527645" modified="20200215094004262" tags="[[In the Animal Farm]] [[Monkeys with car keys]]" title="Keep on bleeding">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -9359,6 +9361,16 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 
  &lt;&lt;heblink [[כוכב המשאלות 01]]&gt;&gt;</pre>
+</div>
+<div created="20200215093552197" modified="20200215094034824" tags="[[In the Animal Farm]]" title="They cut down tree">
+<pre>
+[img[pictures/kortim-ezim.jpg]]
+
+''In the animal farm'', the pigs and the dogs cut down trees, to make more space for building high tall.
+
+ &lt;&lt;heblink [[כורתים עצים]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200202164522080" modified="20200202164753749" tags="[[A friend]] [[Coen sister]]" title="Tomer">
 <pre>[img[pictures/tomer.jpg]]
