--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יד ימין אינה יודעת]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ממשיכים לדמם]] [[בחוות החיות]] [[כורתים עצים]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14044,13 +14044,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170425180523126" modified="20181023115014420" tags="[[בחוות החיות]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20200215093847076" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, החזירים והכלבים כורתים עצים, [[כדי לבנות|כשהיו כבישים צרים וארוכים]] לגובה.''
 
+
+&lt;&lt;englink [[They cut down tree]]&gt;&gt;
 </pre>
 </div>
 <div created="20161115215130799" modified="20170328195040375" title="כירולוגיה פסיכודיאגנוסטית">
@@ -15161,7 +15163,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200215093336630" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200215093807549" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
