--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ממשיכים לדמם]] [[בחוות החיות]] [[כורתים עצים]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בחוות החיות]] [[מאכילים את המצפון]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14044,7 +14044,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170425180523126" modified="20200215093847076" tags="[[בחוות החיות]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20200215094600809" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
@@ -14052,7 +14052,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, החזירים והכלבים כורתים עצים, [[כדי לבנות|כשהיו כבישים צרים וארוכים]] לגובה.''
 
 
-&lt;&lt;englink [[They cut down tree]]&gt;&gt;
+&lt;&lt;englink [[They cut down trees]]&gt;&gt;
 </pre>
 </div>
 <div created="20161115215130799" modified="20170328195040375" title="כירולוגיה פסיכודיאגנוסטית">
@@ -14804,10 +14804,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Meir Ariel]]&gt;&gt;
 </pre>
 </div>
-<div created="20170601174031503" modified="20170601223003837" tags="[[בחוות החיות]]" title="מאכילים את המצפון">
+<div created="20170601174031503" modified="20200215094955137" tags="[[בחוות החיות]]" title="מאכילים את המצפון">
 <pre>[img[pictures/shalom-batooki.jpg]]
 
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, מאכילים את המצפון קלוריות ריקות.
+
+&lt;&lt;englink [[They feed the conscience]]&gt;&gt;</pre>
 </div>
 <div created="20181018172540054" modified="20181020142324163" tags="מסעדות [[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] אימהות" title="מאנטה ריי">
 <pre>[img[pictures/mantaray.jpg]]
@@ -15163,7 +15165,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200215093807549" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200215094922958" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
