--- a/english.html
+++ b/english.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>Alexandra</li>
 
+<li>Assuming and Preserving</li>
+
 <li>Ayala Malach Pines</li>
 
 <li>Berry Sakharof</li>
@@ -432,6 +434,8 @@ Error message and password prompt
 <li>They cut down trees</li>
 
 <li>They feed the conscience</li>
+
+<li>They give away cell phones</li>
 
 <li>Tomer</li>
 
@@ -8310,7 +8314,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[They feed the conscience]] [[They cut down trees]] [[The right hand doesn't know]] [[In the Animal Farm]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[In the Animal Farm]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8529,6 +8533,14 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
+</div>
+<div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
+<pre>
+[img[pictures/nekiyey-capaim.jpg]]
+
+'': In the animal farm'', the animals display faith.
+
+ &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
 <div created="20191113130654313" modified="20200212181621602" tags="[[Outer sisters]]" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
@@ -8848,7 +8860,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[כמה שירים כבר אפשר להמציא בכלל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213211047243" modified="20200213214550757" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
+<div created="20200213211047243" modified="20200215095718351" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
 <pre>
 [img[pictures/histeriyot.jpg]]
 
@@ -8981,7 +8993,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212173527645" modified="20200215094823944" tags="[[In the Animal Farm]] [[Monkeys with car keys]]" title="Keep on bleeding">
+<div created="20200212173527645" modified="20200215095257898" tags="[[In the Animal Farm]] [[Monkeys with car keys]]" title="Keep on bleeding">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -9381,6 +9393,17 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 ''In the animal farm'', they feed the conscience empty calories.
 
  &lt;&lt;heblink [[מאכילים את המצפון]]&gt;&gt;</pre>
+</div>
+<div created="20200215095124478" modified="20200215095333701" tags="[[In the Animal Farm]]" title="They give away cell phones">
+<pre>
+[img[pictures/mechalkim-nayadim.jpg]]
+
+''In the animal farm'', with funn they give away cell phones.
+
+
+
+ &lt;&lt;heblink [[מחלקים סלולרים]]&gt;&gt;
+</pre>
 </div>
 <div created="20200202164522080" modified="20200202164753749" tags="[[A friend]] [[Coen sister]]" title="Tomer">
 <pre>[img[pictures/tomer.jpg]]
