--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[בחוות החיות]] [[מאכילים את המצפון]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בחוות החיות]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11998,7 +11998,7 @@ different tastes, but there were things we both love: family, work, people in al
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20180731155632659" modified="20200213213334156" tags="[[קופים ממונעים]] אימהות" title="האחיות בלות">
+<div created="20180731155632659" modified="20200215095818529" tags="[[קופים ממונעים]] אימהות" title="האחיות בלות">
 <pre>[img[pictures/bloot-sisters.jpg]]
 
 !!![[אווה]]:
@@ -15021,10 +15021,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אחרי שבצהריים ראינו את [[ג'אז|jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב. ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והלכנו לככר רבין, שם המשיכה המחאה הבוערת של הנשים, (אלה [[ששמות לב|היסטריות]] לכל פרט). הן אירגנו הפגנה מקסימה ולמופת. </pre>
 </div>
-<div created="20170425201738858" modified="20170501201434028" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
+<div created="20170425201738858" modified="20200215095450356" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
 <pre>[img[pictures/mechalkim-nayadim.jpg]]
 
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, בכייף שלהם החזירים מחלקים סלולרים.''</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, בכייף שלהם החזירים מחלקים סלולרים.''
+
+&lt;&lt;englink [[They give away cell phones]]&gt;&gt;</pre>
 </div>
 <div created="20170406164152446" modified="20200208130129654" tags="[[אירי וגורה]] [[בדרך לאן שהוא]]" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
@@ -15165,7 +15167,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200215094922958" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200215095408621" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -15179,10 +15181,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170709165358073" modified="20170710123809649" tags="[[בחוות החיות]]" title="מניחים ושומרים">
+<div created="20170709165358073" modified="20200215095849330" tags="[[בחוות החיות]]" title="מניחים ושומרים">
 <pre>[img[pictures/nekiyey-capaim.jpg]]
 
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, החיות מפגינות אמונה.</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, החיות מפגינות אמונה.
+
+&lt;&lt;englink [[Assuming and Preserving]]&gt;&gt;</pre>
 </div>
 <div created="20170114175718512" modified="20190617134304491" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
