--- a/english.html
+++ b/english.html
@@ -275,6 +275,8 @@ Error message and password prompt
 
 <li>Changing</li>
 
+<li>Charlie Kaufman</li>
+
 <li>Children</li>
 
 <li>Christmas dinner</li>
@@ -322,6 +324,8 @@ Error message and password prompt
 <li>Here in the Ghetto</li>
 
 <li>HH</li>
+
+<li>Horses to Glue</li>
 
 <li>Houses</li>
 
@@ -436,6 +440,10 @@ Error message and password prompt
 <li>They feed the conscience</li>
 
 <li>They give away cell phones</li>
+
+<li>They make an effort not to overdue</li>
+
+<li>They make peace</li>
 
 <li>Tomer</li>
 
@@ -8314,7 +8322,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[In the Animal Farm]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8614,6 +8622,17 @@ When a Coen sister is asked what kind of animal is she, she immediately answers-
 
  &lt;&lt;heblink [[משנים]]&gt;&gt;</pre>
 </div>
+<div created="20200215103047710" modified="20200215103655782" tags="[[Outer sisters]] Films" title="Charlie Kaufman">
+<pre>
+[img[pictures/charlie-kaufman.jpg]]
+
+!!![[Yoyo]]:
+
+My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kaufman]]
+
+ &lt;&lt;heblink [[צ'רלי קאופמן]]&gt;&gt;
+. </pre>
+</div>
 <div created="20200212205329430" modified="20200212214202150" tags="Mothers [[Single parent children]] [[Dandan went]]" title="Children">
 <pre>[img[pictures/yeladim.jpg]]
 
@@ -8841,6 +8860,14 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
+<div created="20200215101749821" modified="20200215102128095" tags="[[In the Animal Farm]]" title="Horses to Glue">
+<pre>
+[img[pictures/soosim-ledevek.jpg]]
+
+''In the animal farm'', when the horses turn useless, the pigs and the dogs send them to the glue factory.
+
+ &lt;&lt;heblink [[סוסים לדבק]]&gt;&gt;</pre>
+</div>
 <div created="20200212223417925" modified="20200212224353147" tags="Kitchens" title="Houses">
 <pre>[img[pictures/batim.jpg]]
 
@@ -8860,7 +8887,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[כמה שירים כבר אפשר להמציא בכלל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213211047243" modified="20200215095718351" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
+<div created="20200213211047243" modified="20200215103629400" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
 <pre>
 [img[pictures/histeriyot.jpg]]
 
@@ -9404,6 +9431,26 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
  &lt;&lt;heblink [[מחלקים סלולרים]]&gt;&gt;
 </pre>
+</div>
+<div created="20200215101333765" modified="20200215102145432" tags="[[In the Animal Farm]]" title="They make an effort not to overdue">
+<pre>
+[img[pictures/lo-chazirit.jpg]]
+''
+In the animal farm'', they make an effort not to exaggerate with the freedom of speech.
+
+
+ &lt;&lt;heblink [[משתדלים לא להגזים]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200215102105896" modified="20200215102523188" tags="[[In the Animal Farm]]" title="They make peace">
+<pre>
+[img[pictures/clavzirim-osim-shalom.jpg]]
+
+''In the animal farm'',  Dogpigs make peace.
+
+
+ &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
 </div>
 <div created="20200202164522080" modified="20200202164753749" tags="[[A friend]] [[Coen sister]]" title="Tomer">
 <pre>[img[pictures/tomer.jpg]]
