--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[בחוות החיות]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[צ'רלי קאופמן]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215092845947" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215103353566" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11998,7 +11998,7 @@ different tastes, but there were things we both love: family, work, people in al
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20180731155632659" modified="20200215095818529" tags="[[קופים ממונעים]] אימהות" title="האחיות בלות">
+<div created="20180731155632659" modified="20200215102611714" tags="[[קופים ממונעים]] אימהות" title="האחיות בלות">
 <pre>[img[pictures/bloot-sisters.jpg]]
 
 !!![[אווה]]:
@@ -15021,7 +15021,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אחרי שבצהריים ראינו את [[ג'אז|jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב. ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והלכנו לככר רבין, שם המשיכה המחאה הבוערת של הנשים, (אלה [[ששמות לב|היסטריות]] לכל פרט). הן אירגנו הפגנה מקסימה ולמופת. </pre>
 </div>
-<div created="20170425201738858" modified="20200215095450356" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
+<div created="20170425201738858" modified="20200215101632828" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
 <pre>[img[pictures/mechalkim-nayadim.jpg]]
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, בכייף שלהם החזירים מחלקים סלולרים.''
@@ -15167,7 +15167,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200215095408621" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200215103216109" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -15471,10 +15471,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527144129954" modified="20170527144728501" tags="[[בחוות החיות]]" title="משתדלים לא להגזים">
+<div created="20170527144129954" modified="20200215101713307" tags="[[בחוות החיות]]" title="משתדלים לא להגזים">
 <pre>[img[pictures/lo-chazirit.jpg]]
 
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, משתדלים לא להגזים עם חופש הביטוי.</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, משתדלים לא להגזים עם חופש הביטוי.
+
+&lt;&lt;englink [[They make an effort not to overdue]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20161114205035106" modified="20200212144343164" tags="ארוחות [[חיות אוכל]] מתכונים" title="מתכוני ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
@@ -15718,10 +15722,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בזמן האחרון התחילו להגיש [[בקוסקוס|הקוסקוס]], [[פודינג אורז]], שסוניה מכינה.</pre>
 </div>
-<div created="20170425213116567" modified="20181023115036949" tags="[[בחוות החיות]]" title="סוסים לדבק">
+<div created="20170425213116567" modified="20200215102030583" tags="[[בחוות החיות]]" title="סוסים לדבק">
 <pre>[img[pictures/soosim-ledevek.jpg]]
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, כשהסוסים הופכים חסרי תועלת, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.''
+
+&lt;&lt;englink [[Horses to Glue]]&gt;&gt;
 
 </pre>
 </div>
@@ -16367,11 +16373,13 @@ __אופן ההכנה:__
 
 ננסי  עורכת דין, למדה באנגליה, פלצנית, גזענית, כל הסט של אחות קיי, כולל &quot;אופנתיות&quot; בכל התחומים, מותגיסטית, מרבה לדבר בלועזית, יש לה ילד מגעיל שחוטף מכות ומגיע לו.</pre>
 </div>
-<div created="20170522171825469" modified="20170601223028829" tags="[[בחוות החיות]]" title="עושים שלום">
+<div created="20170522171825469" modified="20200215102644329" tags="[[בחוות החיות]]" title="עושים שלום">
 <pre>[img[pictures/clavzirim-osim-shalom.jpg]]
 
 
-!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, הַכְּלַבְזִירִים עושים [[שלום|מאכילים את המצפון]].</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, הַכְּלַבְזִירִים עושים [[שלום|מאכילים את המצפון]].
+
+&lt;&lt;englink [[They make peace]]&gt;&gt;</pre>
 </div>
 <div created="20170414012036863" modified="20180605132818306" tags="[[מתכוני ארוחת הכריסמס]] [[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="עיגולי מרציפן">
 <pre>[img[pictures/marzipan.jpg]]
@@ -17341,10 +17349,14 @@ Fapina''
 הוא בן יחיד, הוא מסיים השנה תואר שני בסטטיסטיקה, 
 הוא שולט ברזי המרשתת, הוא מתגורר בדירת חדר שקנה ושיפץ, לא רחוק מאיתנו.</pre>
 </div>
-<div created="20170423212318190" modified="20190126104817477" tags="[[אחיות חוץ]] סרטים" title="צ'רלי קאופמן">
+<div created="20170423212318190" modified="20200215103249447" tags="[[אחיות חוץ]] סרטים" title="צ'רלי קאופמן">
 <pre>[img[pictures/charlie-kaufman.jpg]]
 
-[[התסריטאי והבמאי|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A8%D7%9C%D7%99_%D7%A7%D7%90%D7%95%D7%A4%D7%9E%D7%9F]] הנערץ עלי.</pre>
+[[התסריטאי והבמאי|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A8%D7%9C%D7%99_%D7%A7%D7%90%D7%95%D7%A4%D7%9E%D7%9F]] הנערץ עלי.
+
+
+&lt;&lt;englink [[Charlie Kaufman  ]]&gt;&gt;
+</pre>
 </div>
 <div created="20170602205356227" modified="20180405191605848" tags="[[אירי טוענת]]" title="צווארים">
 <pre>[img[pictures/zavarim.jpg]]
